--- a/Test1/Views/Shared/_Layout.cshtml
+++ b/Test1/Views/Shared/_Layout.cshtml
@@ -24,6 +24,7 @@
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                     <li>@Html.ActionLink("Demo", "EmpView", "Employee")</li>
+                    <li>@Html.ActionLink("Demo1", "Emp1View", "Emp1")</li>
                 </ul>
             </div>
         </div>
