--- a/Test1/Views/Employee/EmpView.cshtml
+++ b/Test1/Views/Employee/EmpView.cshtml
@@ -1,32 +1,81 @@
 ﻿
+@model List<Test1.Models.tab_1>
+
+
 @{
     ViewBag.Title = "EmpView";
+    int sn = 0;
 }
 <style>
-    table,th,td{
-        border:2px solid;
-        background-color:red;
-        font-size:12px;
+    table, th, td {
+        border: 2px dashed;
+        border-block-color: forestgreen;
+        background-color: yellowgreen;
+        font-size: 12px;
+    }
 
+    form {
+        width: 100px;
+        display: inline-block;
+    }
+
+    input[type=submit] {
+        color: red;
     }
 </style>
 <h2>EmpView</h2>
 
 <p> Welcome</p>
-<table border="1">
+<table class="table" border="1">
     <tr>
         <th>Id</th>
         <th>Name</th>
-        <th>Course</th>
+        <th>Address</th>
+        <th>Contact</th>
     </tr>
-    <tr>
-        <td>1</td>
-        <td>Kushal</td>
-        <td>Bit</td>
-    </tr>
-    <tr>
-        <td>2</td>
-        <td>Panday</td>
-        <td>Bit</td>
-    </tr>
+    @*<tr>
+            <td>1</td>
+            <td>Kushal</td>
+            <td>Bit</td>
+        </tr>
+        <tr>
+            <td>2</td>
+            <td>Panday</td>
+            <td>Bit</td>
+        </tr>
+    *@
+
+    @foreach (var data in Model)
+    {
+        <tr>
+            <td>@(++sn)</td>
+            <td>@(data.name)</td>
+            <td>@(data.address)</td>
+            <td>@(data.contact)</td>
+        </tr>
+    }
+
 </table>
+
+<form>
+    <fieldset>
+        <legend>Application</legend>
+        <label>Full Name:</label>
+        <input type="text"><br>
+        <label>Age:</label>
+        <input type="text"><br>
+        <label>Address:</label>
+        <input type="text"> <br>
+        <label>Email:</label>
+        <input type="text"> <br>
+        <label>Password:</label>
+        <input type="Password"> <br>
+        <label>Gender:</label><br />
+        <input type="radio" name="Gender">
+        <label>Male</label><br />
+        <input type="radio" name="Gender">
+        <label>Female</label>
+        <input type="submit" name="submit">
+
+    </fieldset>
+</form>
