--- a/Test1/Views/Employee/EmpView.cshtml
+++ b/Test1/Views/Employee/EmpView.cshtml
@@ -6,6 +6,8 @@
     ViewBag.Title = "EmpView";
     int sn = 0;
 }
+
+<a href="@Url.Action("Create")">Add new record</a>
 <style>
     table, th, td {
         border: 2px dashed;
