--- a/Test1/Views/Employee/Edit.cshtml
+++ b/Test1/Views/Employee/Edit.cshtml
@@ -1,30 +1,28 @@
-﻿
-@{
-    ViewBag.Title = "Create";
-}
-<style>
-    input[type="submit"]:hover{
-        color:white;
-        background-color:firebrick;
-    }
-</style>
+﻿@model Test1.Models.tab_1
 
-<h2>Create</h2>
-<form action="SaveData">
-    <label >Name:</label>
-    <div >
+@{
+    ViewBag.Title = "Edit";
+}
+
+<h2>Edit</h2>
+
+@using (Html.BeginForm("UpdateData", "Employee"))
+{
+    <input type="hidden" name="Id" value="@Model.Id" />
+    <label>Name:</label>
+    <div>
         <input type="text" name="name" class="form-control">
     </div>
     <label>Address:</label>
-    <div >
+    <div>
         <input type="text" name="address" class="form-control">
     </div>
-    <label >Contact:</label>
-    <div >
+    <label>Contact:</label>
+    <div>
         <input type="text" name="contact" class="form-control">
     </div>
-    <div >
+    <div>
         <input type="submit" class="btn btn-success" value="Save" />
     </div>
-</form>
+}
 
