--- a/Test1/Views/Employee/EmpView.cshtml
+++ b/Test1/Views/Employee/EmpView.cshtml
@@ -34,6 +34,7 @@
         <th>Name</th>
         <th>Address</th>
         <th>Contact</th>
+        <th>Edit</th>
     </tr>
     @*<tr>
             <td>1</td>
@@ -54,6 +55,7 @@
             <td>@(data.name)</td>
             <td>@(data.address)</td>
             <td>@(data.contact)</td>
+            <td><a href="@Url.Action("Edit", new {id=data.Id})">Edit</a></td>
         </tr>
     }
 
