--- a/Test1/Views/Shared/_Layout.cshtml
+++ b/Test1/Views/Shared/_Layout.cshtml
@@ -25,6 +25,8 @@
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                     <li>@Html.ActionLink("Demo", "EmpView", "Employee")</li>
                     <li>@Html.ActionLink("Demo1", "Emp1View", "Emp1")</li>
+                    <li>@Html.ActionLink("Employee", "EmpNewView", "EmpNew")</li>
+                    <li>@Html.ActionLink("EmployeeSalary", "EmpSalView", "EmployeeSalaryDetails")</li>
                 </ul>
             </div>
         </div>
