--- a/Test1/Views/EmployeeSalaryDetails/Create1.cshtml
+++ b/Test1/Views/EmployeeSalaryDetails/Create1.cshtml
@@ -2,7 +2,11 @@
 @{
     ViewBag.Title = "Create";
 }
+<style>
+    .form-control{
 
+    }
+</style>
 
 <h2>Create</h2>
 
@@ -23,21 +27,23 @@
 
 
 <h2>Create</h2>
-<form action="SaveData">
+@using (Html.BeginForm("SaveData", "EmployeeSalaryDetails", FormMethod.Post))
+{
     <label>EmployeeId:</label>
     <div>
-        <input type="text" name="id" class="form-control">
+       
+        @Html.DropDownList("employeeList", null, "Select", htmlAttributes: new { @Name = "employee_id" })
     </div>
     <label>Salary Paid:</label>
     <div>
-        <input type="text" name="name" class="form-control">
+        <input type="text" name="salary_paid" class="form-control">
     </div>
     <label>Paid Date:</label>
     <div>
-        <input type="date" name="date" class="form-control">
+        <input type="date" name="paid_date" class="form-control">
     </div>
 
     <div>
         <input type="submit" class="btn btn-success" value="Save" />
     </div>
-</form>
+}
