--- a/Test1/Views/Employee/Edit.cshtml
+++ b/Test1/Views/Employee/Edit.cshtml
@@ -8,7 +8,7 @@
 
 @using (Html.BeginForm("UpdateData", "Employee"))
 {
-    <input type="hidden" name="Id" value="@Model.Id" />
+    <input type="hidden" name="id" value="@Model.Id" />
     <label>Name:</label>
     <div>
         <input type="text" name="name" class="form-control">
